--- a/scratch_pad_2024.Rmd
+++ b/scratch_pad_2024.Rmd
@@ -49,15 +49,23 @@ rm(list = ls(pattern = "^m\\d{2}(_cleaned)?$"))
 gc()
 ```
 
-Number of member vs casual rides
+Drop duplicate rows
 
 ```{r}
-table(df$member_casual)
+df %>%
+  count(ride_id) %>%
+  filter(n > 1)
 ```
 
-3.7 million member rides vs 2.2 million casual rides. Unfortunately, there is no way to tell how many are repeat users. Presumably, many member riders repeat far more often than casual riders. The scenario puts members at 30% of Cyclistic.
+```{r}
+df <- df %>% distinct(ride_id, .keep_all = TRUE)
+```
 
-In the scenario, and in real life, the data is shared without any sort of identifying information that would help track that, probably why after 2019 they removed gender and birth year. It wasn't much help anyway.
+```{r}
+df %>%
+  count(ride_id) %>%
+  filter(n > 1)
+```
 
 ```{r}
 table(df$month)
@@ -70,6 +78,15 @@ df$month <- sprintf("%02d", as.numeric(format(df$date, "%m")))
 table(df$month)
 ```
 
+Number of member vs casual rides
+
+```{r}
+table(df$member_casual)
+```
+
+3.7 million member rides vs 2.2 million casual rides. Unfortunately, there is no way to tell how many are repeat users. Presumably, many member riders repeat far more often than casual riders. The scenario puts members at 30% of Cyclistic.
+
+In the scenario, and in real life, the data is shared without any sort of identifying information that would help track that, probably why after 2019 they removed gender and birth year. It wasn't much help anyway.
 
 ## NA stations and e-bikes
 
@@ -663,7 +680,7 @@ ggplot(df, aes(x = rideable_type, y = ride_length, fill = member_casual)) +
        y = "Ride Length (minutes)")
 ```
 
-Classic pedal bikes go longer.
+Classic pedal bikes are favored. Is that because there's a bigger supply, or greater consumer preference?
 
 ```{r}
 # bar chart: ride frequency by day of the week
@@ -710,6 +727,22 @@ df %>%
        y = "Day of the Week")
 ```
 
+```{r}
+df %>%
+  mutate(month = format(as.Date(started_at), "%Y-%m")) %>%
+  group_by(month, rideable_type, member_casual) %>%
+  summarise(rides = n(), .groups = "drop") %>%
+  ggplot(aes(x = month, y = rides, fill = rideable_type)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  facet_wrap(~ member_casual) +
+  theme_minimal() +
+  labs(title = "Rideable Type Usage per Month",
+       x = "Month",
+       y = "Number of Rides") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+what's going on with electric_scooter there? Did they only briefly demo it in September? Or is this a categorizing error?
 
 ## Stations
 
@@ -1094,23 +1127,6 @@ plot_heatmap <- function(data, title) {
     theme_minimal() +
     labs(title = title, x = "Longitude", y = "Latitude")
 }
-
-# Convert to sf object
-# df_sf <- st_as_sf(df_bbox, coords = c("end_lng", "end_lat"), crs = 4326)
-# 
-# electric <- df_sf %>% filter(rideable_type == "electric_bike")
-# classic <- df_sf %>% filter(rideable_type == "classic_bike")
-# member <- df_sf %>% filter(member_casual == "member")
-# casual <- df_sf %>% filter(member_casual == "casual")
-
-# plot_heatmap <- function(data, title) {
-#   ggplot(data, aes(x = end_lng, y = end_lat)) +
-#     annotation_map_tile(type = "osm", zoom = 12) +  # OSM background
-#     geom_bin2d(bins = 100) +
-#     scale_fill_gradient(low = "blue", high = "red") +
-#     theme_minimal() +
-#     labs(title = title, x = "Longitude", y = "Latitude")
-# }
 ```
 
 ```{r}
@@ -1146,14 +1162,14 @@ library(leaflet.extras)
 
 plot_leaflet_heatmap <- function(data, title, sample_size = 50000) {
   data_sample <- data %>% sample_n(sample_size)
-  
+
   # Compute density (counts per unique lat/lng combination)
   density_data <- data_sample %>%
     count(end_lng, end_lat)
-  
+
   # Define a continuous color palette
-  color_palette <- colorNumeric(palette = "viridis", domain = density_data$n) 
-  
+  color_palette <- colorNumeric(palette = "viridis", domain = density_data$n)
+
   leaflet(data_sample) %>%
     addTiles() %>%
     setView(lng = -87.63, lat = 41.88, zoom = 13) %>%  # Center on downtown Chicago
@@ -1169,8 +1185,8 @@ plot_leaflet_heatmap <- function(data, title, sample_size = 50000) {
 set.seed(42)  # Global seed for reproducibility
 
 # Sample each group separately
-electric <- df_bbox %>% filter(rideable_type == "electric_bike") %>% sample_n(50000)
-classic <- df_bbox %>% filter(rideable_type == "classic_bike") %>% sample_n(50000)
+# electric <- df_bbox %>% filter(rideable_type == "electric_bike") %>% sample_n(50000)
+# classic <- df_bbox %>% filter(rideable_type == "classic_bike") %>% sample_n(50000)
 member <- df_bbox %>% filter(member_casual == "member") %>% sample_n(50000)
 casual <- df_bbox %>% filter(member_casual == "casual") %>% sample_n(50000)
 ```
@@ -1186,11 +1202,11 @@ casual <- df_bbox %>% filter(member_casual == "casual") %>% sample_n(50000)
 ```{r}
 
 # Plot Leaflet Heatmaps
-plot_leaflet_heatmap(electric, "Electric Bike Trips")
+# plot_leaflet_heatmap(electric, "Electric Bike Trips")
 ```
 
 ```{r}
-plot_leaflet_heatmap(classic, "Classic Bike Trips")
+# plot_leaflet_heatmap(classic, "Classic Bike Trips")
 ```
 
 ```{r}
@@ -1201,39 +1217,52 @@ plot_leaflet_heatmap(member, "Member Bike Trips")
 plot_leaflet_heatmap(casual, "Casual Bike Trips")
 ```
 
+The prior leafleat heatmaps are a sample of 50,000. Below is the whole dataset, which crashes when I knit R Markdown. 
+
 ```{r}
-library(leaflet)
-library(leaflet.extras)
-library(dplyr)
-
-plot_leaflet_heatmap <- function(data, title) {
-  # Compute density (counts per unique lat/lng combination)
-  density_data <- data %>%
-    count(end_lng, end_lat)
-  
-  # Define a continuous color palette
-  color_palette <- colorNumeric(palette = "viridis", domain = density_data$n) 
-  
-  leaflet(data) %>%
-    addTiles() %>%
-    setView(lng = -87.63, lat = 41.88, zoom = 13) %>%  # Center on downtown Chicago
-    addHeatmap(lng = ~end_lng, lat = ~end_lat, blur = 15, max = 1, radius = 10) %>%
-    addLegend(position = "bottomright",
-              pal = color_palette,
-              values = density_data$n,
-              title = title)
-}
-
-# Use the entire dataset without sampling
-electric <- df_bbox %>% filter(rideable_type == "electric_bike")
-classic <- df_bbox %>% filter(rideable_type == "classic_bike")
-member <- df_bbox %>% filter(member_casual == "member")
-casual <- df_bbox %>% filter(member_casual == "casual")
-
-# Plot heatmaps for each group
-plot_leaflet_heatmap(electric, "Electric Bike Trips Heatmap")
-plot_leaflet_heatmap(classic, "Classic Bike Trips Heatmap")
-plot_leaflet_heatmap(member, "Member Trips Heatmap")
-plot_leaflet_heatmap(casual, "Casual Trips Heatmap")
+# library(leaflet)
+# library(leaflet.extras)
+# library(dplyr)
+# 
+# plot_leaflet_heatmap <- function(data, lng_col, lat_col, title, zoom_level = 13) {
+#   # Remove rows with missing lat/lng values
+#   data <- data %>% filter(!is.na(!!sym(lng_col)) & !is.na(!!sym(lat_col)))
+#   
+#   density_data <- data %>% count(!!sym(lng_col), !!sym(lat_col))
+#   color_palette <- colorNumeric(palette = "viridis", domain = density_data$n)
+#   
+#   leaflet(data) %>%
+#     addTiles() %>%
+#     setView(lng = -87.63, lat = 41.88, zoom = zoom_level) %>%
+#     addHeatmap(lng = as.formula(paste0("~", lng_col)), 
+#                lat = as.formula(paste0("~", lat_col)), 
+#                blur = 15, max = 1, radius = 10) %>%
+#     addLegend(position = "bottomright", 
+#               pal = color_palette, 
+#               values = density_data$n, 
+#               title = title)
+# }
+# 
+# # Filter subsets
+# member <- df %>% filter(member_casual == "member")
+# casual <- df %>% filter(member_casual == "casual")
 ```
+
+```{r}
+# Generate heatmaps at default zoom (downtown focus)
+# plot_leaflet_heatmap(member, "start_lng", "start_lat", "Member Start Locations Heatmap", zoom_level = 13)
+# plot_leaflet_heatmap(member, "end_lng", "end_lat", "Member End Locations Heatmap", zoom_level = 13)
+# plot_leaflet_heatmap(casual, "start_lng", "start_lat", "Casual Start Locations Heatmap", zoom_level = 13)
+# plot_leaflet_heatmap(casual, "end_lng", "end_lat", "Casual End Locations Heatmap", zoom_level = 13)
+```
+
+
+```{r}
+# plot_leaflet_heatmap(member, "start_lng", "start_lat", "Member Start Locations Heatmap (Greater Chicago)", zoom_level = 11)
+# plot_leaflet_heatmap(member, "end_lng", "end_lat", "Member End Locations Heatmap (Greater Chicago)", zoom_level = 11)
+# plot_leaflet_heatmap(casual, "start_lng", "start_lat", "Casual Start Locations Heatmap (Greater Chicago)", zoom_level = 11)
+# plot_leaflet_heatmap(casual, "end_lng", "end_lat", "Casual End Locations Heatmap (Greater Chicago)", zoom_level = 11)
+
+```
+
 
