--- a/scratch_pad_2024.Rmd
+++ b/scratch_pad_2024.Rmd
@@ -1217,52 +1217,94 @@ plot_leaflet_heatmap(member, "Member Bike Trips")
 plot_leaflet_heatmap(casual, "Casual Bike Trips")
 ```
 
-The prior leafleat heatmaps are a sample of 50,000. Below is the whole dataset, which crashes when I knit R Markdown. 
+The prior leafleat heatmaps are a sample of 50,000.
 
 ```{r}
-# library(leaflet)
-# library(leaflet.extras)
-# library(dplyr)
-# 
-# plot_leaflet_heatmap <- function(data, lng_col, lat_col, title, zoom_level = 13) {
-#   # Remove rows with missing lat/lng values
-#   data <- data %>% filter(!is.na(!!sym(lng_col)) & !is.na(!!sym(lat_col)))
-#   
-#   density_data <- data %>% count(!!sym(lng_col), !!sym(lat_col))
-#   color_palette <- colorNumeric(palette = "viridis", domain = density_data$n)
-#   
-#   leaflet(data) %>%
-#     addTiles() %>%
-#     setView(lng = -87.63, lat = 41.88, zoom = zoom_level) %>%
-#     addHeatmap(lng = as.formula(paste0("~", lng_col)), 
-#                lat = as.formula(paste0("~", lat_col)), 
-#                blur = 15, max = 1, radius = 10) %>%
-#     addLegend(position = "bottomright", 
-#               pal = color_palette, 
-#               values = density_data$n, 
-#               title = title)
-# }
-# 
-# # Filter subsets
-# member <- df %>% filter(member_casual == "member")
-# casual <- df %>% filter(member_casual == "casual")
+library(leaflet)
+
+# Function to get top 10 stations for start or end locations
+get_top_stations <- function(data, station_col, member_type) {
+  data %>%
+    filter(!is.na(!!sym(station_col)), member_casual == member_type) %>%
+    count(!!sym(station_col), sort = TRUE) %>%
+    top_n(10, n) %>%
+    pull(!!sym(station_col))
+}
+
+# Get top 10 stations
+top_start_members <- get_top_stations(df, "start_station_name", "member")
+top_end_members <- get_top_stations(df, "end_station_name", "member")
+
+top_start_casual <- get_top_stations(df, "start_station_name", "casual")
+top_end_casual <- get_top_stations(df, "end_station_name", "casual")
+
+# Function to filter trips matching the top 10 stations
+filter_trips <- function(data, station_list, station_col) {
+  data %>% filter(!!sym(station_col) %in% station_list)
+}
+
+# Filter trips based on top stations
+trips_from_top_start_members <- filter_trips(df, top_start_members, "start_station_name")
+trips_to_top_end_members <- filter_trips(df, top_end_members, "end_station_name")
+
+trips_from_top_start_casual <- filter_trips(df, top_start_casual, "start_station_name")
+trips_to_top_end_casual <- filter_trips(df, top_end_casual, "end_station_name")
+
+# Function to plot Leaflet heatmaps
+plot_leaflet_heatmap <- function(data, lng_col, lat_col, title, zoom_level = 13) {
+  data <- data %>% filter(!is.na(!!sym(lng_col)) & !is.na(!!sym(lat_col)))
+  
+  density_data <- data %>% count(!!sym(lng_col), !!sym(lat_col))
+  color_palette <- colorNumeric(palette = "viridis", domain = density_data$n)
+
+  leaflet(data) %>%
+    addTiles() %>%
+    setView(lng = -87.63, lat = 41.88, zoom = zoom_level) %>%
+    addHeatmap(lng = as.formula(paste0("~", lng_col)),
+               lat = as.formula(paste0("~", lat_col)),
+               blur = 15, max = 1, radius = 10) %>%
+    addLegend(position = "bottomright",
+              pal = color_palette,
+              values = density_data$n,
+              title = title)
+}
+
 ```
 
 ```{r}
-# Generate heatmaps at default zoom (downtown focus)
-# plot_leaflet_heatmap(member, "start_lng", "start_lat", "Member Start Locations Heatmap", zoom_level = 13)
-# plot_leaflet_heatmap(member, "end_lng", "end_lat", "Member End Locations Heatmap", zoom_level = 13)
-# plot_leaflet_heatmap(casual, "start_lng", "start_lat", "Casual Start Locations Heatmap", zoom_level = 13)
-# plot_leaflet_heatmap(casual, "end_lng", "end_lat", "Casual End Locations Heatmap", zoom_level = 13)
+plot_leaflet_heatmap(trips_from_top_start_members, "start_lng", "start_lat", "Top 10 Start (Members)")
 ```
-
 
 ```{r}
-# plot_leaflet_heatmap(member, "start_lng", "start_lat", "Member Start Locations Heatmap (Greater Chicago)", zoom_level = 11)
-# plot_leaflet_heatmap(member, "end_lng", "end_lat", "Member End Locations Heatmap (Greater Chicago)", zoom_level = 11)
-# plot_leaflet_heatmap(casual, "start_lng", "start_lat", "Casual Start Locations Heatmap (Greater Chicago)", zoom_level = 11)
-# plot_leaflet_heatmap(casual, "end_lng", "end_lat", "Casual End Locations Heatmap (Greater Chicago)", zoom_level = 11)
+plot_leaflet_heatmap(trips_from_top_start_members, "end_lng", "end_lat", "Destinations from Top 10 Start (Members)")
+```
+
+```{r}
+plot_leaflet_heatmap(trips_to_top_end_members, "end_lng", "end_lat", "Top 10 End (Members)")
 
 ```
 
+```{r}
+plot_leaflet_heatmap(trips_to_top_end_members, "start_lng", "start_lat", "Origins for Top 10 End (Members)")
+
+```
+
+```{r}
+plot_leaflet_heatmap(trips_from_top_start_casual, "start_lng", "start_lat", "Top 10 Start (Casuals)")
+
+```
+
+```{r}
+plot_leaflet_heatmap(trips_from_top_start_casual, "end_lng", "end_lat", "Destinations from Top 10 Start (Casuals)")
+```
+
+```{r}
+plot_leaflet_heatmap(trips_to_top_end_casual, "end_lng", "end_lat", "Top 10 End (Casuals)")
+
+```
+
+```{r}
+plot_leaflet_heatmap(trips_to_top_end_casual, "start_lng", "start_lat", "Origins for Top 10 End (Casuals)")
+
+```
 
